<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPages"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/carName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/brand"
        android:minHeight="48dp"
        android:textColor="@color/forText"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/carPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:minHeight="48dp"
        android:textColor="@color/forText"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carColor"
        app:layout_constraintVertical_bias="0.046"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/carColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/color"
        android:minHeight="48dp"
        android:textColor="@color/forText"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carName"
        app:layout_constraintVertical_bias="0.041"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addButton"
        android:textColor="@color/forText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carPrice"
        app:layout_constraintVertical_bias="0.185" />

    <Button
        android:id="@+id/readButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readButton"
        android:textColor="@color/forText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toEndOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/carPrice"
        app:layout_constraintVertical_bias="0.185" />

    <ImageView
        android:id="@+id/carImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/carName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photoCar"
        android:textColor="@color/forText"
        app:layout_constraintBottom_toTopOf="@+id/carImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>